[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/network_setup.gd" type="Script" id=1]

[node name="network_setup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="multiplayer_config" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="create_server" type="Button" parent="multiplayer_config"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -352.0
margin_top = -188.0
margin_right = 128.0
margin_bottom = -68.0
text = "CREATE SERVER"

[node name="join_server" type="Button" parent="multiplayer_config"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = 68.0
margin_right = 368.0
margin_bottom = 188.0
text = "JOIN SERVER"

[node name="server_ip" type="LineEdit" parent="multiplayer_config"]
margin_left = 160.0
margin_top = 264.0
margin_right = 880.0
margin_bottom = 334.0
align = 1
placeholder_text = "ENTER IP YOU WANT TO JOIN!!!!!!"

[node name="Label" type="Label" parent="multiplayer_config"]
margin_left = 656.0
margin_top = 128.0
margin_right = 984.0
margin_bottom = 208.0
text = "WELCOME TO POGBALL!!!!!!!!! I LOVE POGBALL
MADE BY EVAN YAN WHO MADE POGBALL"
align = 1
valign = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="your_ip" type="Label" parent="CanvasLayer"]
margin_left = 72.0
margin_top = 376.0
margin_right = 384.0
margin_bottom = 472.0
align = 1
valign = 1

[connection signal="pressed" from="multiplayer_config/create_server" to="." method="_on_create_server_pressed"]
[connection signal="pressed" from="multiplayer_config/join_server" to="." method="_on_join_server_pressed"]
